libs/preprocessor/tests/errors/pe16_if_incompatible_types/stderr.ansi
[31m[PE15] Error:[0m incompatible types for operator in #if
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m/source.hpp:3:7[38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m1 │[0m [38;5;249m#[0m[38;5;249md[0m[38;5;249me[0m[38;5;249mf[0m[38;5;249mi[0m[38;5;249mn[0m[38;5;249me[0m[38;5;249m [0m[38;5;249mA[0m[38;5;249m [0m[38;5;155m"[0m[38;5;155mH[0m[38;5;155me[0m[38;5;155ml[0m[38;5;155ml[0m[38;5;155mo[0m[38;5;155m"[0m
 [38;5;240m  │[0m           [38;5;155m─[0m[38;5;155m─[0m[38;5;155m─[0m[38;5;155m┬[0m[38;5;155m─[0m[38;5;155m─[0m[38;5;155m─[0m  
 [38;5;240m  │[0m              [38;5;155m╰[0m[38;5;155m─[0m[38;5;155m─[0m[38;5;155m─[0m[38;5;155m─[0m[38;5;155m─[0m left side of operator
 [38;5;240m  │[0m 
 [38;5;246m3 │[0m [38;5;249m#[0m[38;5;249mi[0m[38;5;249mf[0m[38;5;249m [0m[38;5;249mA[0m[38;5;249m [0m[38;5;201m>[0m[38;5;249m [0m[38;5;249m2[0m
 [38;5;240m  │[0m       [38;5;201m┬[0m  
 [38;5;240m  │[0m       [38;5;201m╰[0m[38;5;201m─[0m[38;5;201m─[0m operator only supports numbers
[38;5;246m───╯[0m
